package DP.Tries.Factory.PizzaFactory.Pizzas.NonVegPizzas;

import DP.Tries.Factory.PizzaFactory.Pizzas.Pizza;

public abstract class NonVegPizza extends Pizza {

  // protected ArrayList<String> NonVegContents;


}
